--- a/lora.ipynb
+++ b/lora.ipynb
@@ -54,13 +54,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 170,
    "id": "0981712e-796d-4856-8539-c9ec6a5663ec",
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch\n",
-    "import torch.nn as nn"
+    "import torch.nn as nn\n",
+    "import torch.optim as optim\n",
+    "import torch.nn.functional as F\n",
+    "\n",
+    "from transformers import ViTForImageClassification, ViTConfig\n",
+    "\n",
+    "from torchvision import transforms\n",
+    "from torchvision.datasets import CIFAR10\n",
+    "from torch.utils.data import DataLoader\n",
+    "from transformers import ViTFeatureExtractor, ViTImageProcessor \n",
+    "\n",
+    "from tqdm import tqdm"
    ]
   },
   {
@@ -134,12 +145,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 131,
    "id": "b17c0b4c-2353-47ba-865d-e631a002fed2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Linear(nn.Module):\n",
+    "class LoRALinear(nn.Module):\n",
     "    def __init__(self, in_features: int, out_features: int, bias: bool, r: int, alpha: int = None):\n",
     "        super().__init__()\n",
     "\n",
@@ -187,12 +198,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 132,
    "id": "473a0974-b3b1-4ef9-822b-4470606dccd1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "layer = Linear(\n",
+    "layer = LoRALinear(\n",
     "    in_features = 10, # k\n",
     "    out_features = 10, # d\n",
     "    bias = True, \n",
@@ -206,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 134,
    "id": "5552d4f2-2d13-4d4e-b796-894efcd24d89",
    "metadata": {},
    "outputs": [
@@ -233,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 135,
    "id": "63a99c3a-8b28-4e5c-80b7-c71d5ac4b418",
    "metadata": {},
    "outputs": [
@@ -242,40 +253,40 @@
       "text/plain": [
        "[('weight',\n",
        "  Parameter containing:\n",
-       "  tensor([[-4.3908e+06,  4.5783e-41, -4.3908e+06,  4.5783e-41, -2.2521e-16,\n",
-       "            4.5782e-41, -2.2518e-16,  4.5782e-41, -2.2526e-16,  4.5782e-41],\n",
-       "          [-2.2512e-16,  4.5782e-41, -2.2381e-16,  4.5782e-41, -2.2346e-16,\n",
-       "            4.5782e-41, -3.7146e-19,  4.5782e-41, -2.3118e-16,  4.5782e-41],\n",
-       "          [-2.2222e-16,  4.5782e-41, -2.2413e-16,  4.5782e-41, -3.7177e-19,\n",
-       "            4.5782e-41, -2.0052e-16,  4.5782e-41, -2.2522e-16,  4.5782e-41],\n",
-       "          [-2.2514e-16,  4.5782e-41, -2.2540e-16,  4.5782e-41, -2.2527e-16,\n",
-       "            4.5782e-41, -2.2529e-16,  4.5782e-41, -2.2538e-16,  4.5782e-41],\n",
-       "          [-2.2549e-16,  4.5782e-41, -2.2544e-16,  4.5782e-41, -2.1103e-16,\n",
-       "            4.5782e-41, -2.3273e-16,  4.5782e-41, -2.3274e-16,  4.5782e-41],\n",
-       "          [-2.3273e-16,  4.5782e-41, -2.2394e-16,  4.5782e-41, -2.2395e-16,\n",
-       "            4.5782e-41, -2.2393e-16,  4.5782e-41, -2.2338e-16,  4.5782e-41],\n",
-       "          [ 3.5873e-43,  0.0000e+00,  3.8115e-43,  0.0000e+00, -2.6871e+20,\n",
-       "            3.0910e-41,  2.9708e-43,  0.0000e+00,  0.0000e+00,  0.0000e+00],\n",
-       "          [ 0.0000e+00,  0.0000e+00,  0.0000e+00,  4.5783e-41,  1.8788e+31,\n",
-       "            1.7220e+22,  2.1715e-18,  2.1781e-04,  1.3482e-05,  1.0606e-08],\n",
-       "          [ 4.1958e-08,  4.4154e-05,  6.7204e-07,  3.4152e-06,  1.3150e+22,\n",
-       "            1.0572e-05,  1.3201e+19,  2.4422e-18,  3.1360e+27,  7.0800e+31],\n",
-       "          [ 3.1095e-18,  4.7851e+22,  2.8826e+32,  4.4248e+30,  7.6729e+34,\n",
-       "            2.1707e-18,  4.5447e+30,  7.0062e+22,  2.1715e-18,  2.6331e+20]])),\n",
+       "  tensor([[-4.3908e+06,  4.5783e-41, -6.5029e+22,  3.0910e-41, -2.0746e+06,\n",
+       "            4.5783e-41, -2.2348e-16,  4.5782e-41, -2.2348e-16,  4.5782e-41],\n",
+       "          [-2.2348e-16,  4.5782e-41, -1.9009e+06,  4.5783e-41, -2.2348e-16,\n",
+       "            4.5782e-41,  1.1339e+22,  4.5782e-41, -1.7726e+06,  4.5783e-41],\n",
+       "          [-1.9427e+06,  4.5783e-41, -1.7726e+06,  4.5783e-41,  1.1339e+22,\n",
+       "            4.5782e-41, -4.0910e-22,  4.5783e-41, -1.9427e+06,  4.5783e-41],\n",
+       "          [ 1.1339e+22,  4.5782e-41, -4.0910e-22,  4.5783e-41, -1.9427e+06,\n",
+       "            4.5783e-41,  1.1339e+22,  4.5782e-41, -2.1381e+06,  4.5783e-41],\n",
+       "          [-1.9426e+06,  4.5783e-41, -1.7726e+06,  4.5783e-41, -2.1381e+06,\n",
+       "            4.5783e-41, -2.1381e+06,  4.5783e-41,  1.1339e+22,  4.5782e-41],\n",
+       "          [-2.2348e-16,  4.5782e-41, -1.9427e+06,  4.5783e-41, -6.4976e+04,\n",
+       "            4.5783e-41, -1.9009e+06,  4.5783e-41, -1.9428e+06,  4.5783e-41],\n",
+       "          [-1.9009e+06,  4.5783e-41, -1.9009e+06,  4.5783e-41, -1.9009e+06,\n",
+       "            4.5783e-41, -6.4976e+04,  4.5783e-41, -1.9009e+06,  4.5783e-41],\n",
+       "          [-1.9428e+06,  4.5783e-41, -1.9009e+06,  4.5783e-41, -1.9009e+06,\n",
+       "            4.5783e-41,  1.1339e+22,  4.5782e-41, -8.3594e+04,  4.5783e-41],\n",
+       "          [-1.9426e+06,  4.5783e-41, -8.3594e+04,  4.5783e-41, -8.3594e+04,\n",
+       "            4.5783e-41, -8.3594e+04,  4.5783e-41,  1.1339e+22,  4.5782e-41],\n",
+       "          [-1.9428e+06,  4.5783e-41, -2.9406e-16,  4.5782e-41, -2.2568e+06,\n",
+       "            4.5783e-41, -1.9426e+06,  4.5783e-41, -2.9406e-16,  4.5782e-41]])),\n",
        " ('bias',\n",
        "  Parameter containing:\n",
-       "  tensor([-2.7404e+05,  4.5783e-41, -3.0673e-16,  4.5782e-41, -5.1068e+05,\n",
-       "           4.5783e-41, -2.0746e+06,  4.5783e-41, -3.0677e-16,  4.5782e-41])),\n",
+       "  tensor([ 1.3452e-43,  0.0000e+00,  8.9683e-44,  0.0000e+00, -3.6318e-34,\n",
+       "           3.0917e-41,  7.3604e+22,  4.1878e-11,  7.2150e+22,  7.2251e+28])),\n",
        " ('lora_a',\n",
        "  Parameter containing:\n",
-       "  tensor([[ 0.2112, -0.1343, -0.1370, -0.2540, -0.1336,  0.0165, -0.0967,  0.3018,\n",
-       "            0.2074,  0.1897],\n",
-       "          [-0.2157,  0.1048, -0.1616, -0.1467, -0.2952,  0.3048,  0.1351,  0.2552,\n",
-       "            0.0844,  0.2030],\n",
-       "          [-0.1461,  0.1067, -0.0928,  0.2067, -0.0011, -0.2366,  0.2331,  0.0753,\n",
-       "           -0.2640,  0.0497],\n",
-       "          [ 0.1641, -0.3046,  0.2206,  0.3138,  0.0846,  0.0562,  0.0480, -0.0252,\n",
-       "            0.2493,  0.1176]], requires_grad=True)),\n",
+       "  tensor([[ 0.1772,  0.0408,  0.2112,  0.1531,  0.0105,  0.2881,  0.1873, -0.0319,\n",
+       "           -0.1415, -0.0082],\n",
+       "          [-0.0987,  0.2028, -0.3151,  0.2860,  0.2336, -0.0068, -0.2626,  0.1924,\n",
+       "            0.2174,  0.2253],\n",
+       "          [ 0.0782, -0.2005, -0.0107, -0.1138,  0.2794, -0.1678, -0.2930,  0.2028,\n",
+       "           -0.2527,  0.2582],\n",
+       "          [ 0.2098, -0.1837, -0.1928,  0.2048, -0.2532,  0.2120, -0.0389, -0.0626,\n",
+       "            0.1318, -0.2378]], requires_grad=True)),\n",
        " ('lora_b',\n",
        "  Parameter containing:\n",
        "  tensor([[0., 0., 0., 0.],\n",
@@ -290,13 +301,319 @@
        "          [0., 0., 0., 0.]], requires_grad=True))]"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "list(layer.named_parameters())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4870abe4-6828-409b-a14e-a8a98cf3e0af",
+   "metadata": {},
+   "source": [
+    "#### Testing LoRA implementation on a HuggingFace vision model and CIFAR-10 dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
+   "id": "d2bdfe3e-e361-4123-a0e4-df1a745afa66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of ViTForImageClassification were not initialized from the model checkpoint at google/vit-base-patch16-224-in21k and are newly initialized: ['classifier.bias', 'classifier.weight']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = ViTForImageClassification.from_pretrained(\"google/vit-base-patch16-224-in21k\", num_labels=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "c9e501f0-1684-46e9-b569-af3cf5cbd143",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model before LoRA\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ViTForImageClassification(\n",
+       "  (vit): ViTModel(\n",
+       "    (embeddings): ViTEmbeddings(\n",
+       "      (patch_embeddings): ViTPatchEmbeddings(\n",
+       "        (projection): Conv2d(3, 768, kernel_size=(16, 16), stride=(16, 16))\n",
+       "      )\n",
+       "      (dropout): Dropout(p=0.0, inplace=False)\n",
+       "    )\n",
+       "    (encoder): ViTEncoder(\n",
+       "      (layer): ModuleList(\n",
+       "        (0-11): 12 x ViTLayer(\n",
+       "          (attention): ViTAttention(\n",
+       "            (attention): ViTSelfAttention(\n",
+       "              (query): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (key): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (value): Linear(in_features=768, out_features=768, bias=True)\n",
+       "            )\n",
+       "            (output): ViTSelfOutput(\n",
+       "              (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (dropout): Dropout(p=0.0, inplace=False)\n",
+       "            )\n",
+       "          )\n",
+       "          (intermediate): ViTIntermediate(\n",
+       "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
+       "          )\n",
+       "          (output): ViTOutput(\n",
+       "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "            (dropout): Dropout(p=0.0, inplace=False)\n",
+       "          )\n",
+       "          (layernorm_before): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "          (layernorm_after): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (layernorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "  )\n",
+       "  (classifier): Linear(in_features=768, out_features=10, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 145,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Model before LoRA\")\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "7e4db82e-2a3e-4ab8-9ad1-6fe34da932e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inject_lora_in_vit(model, r=8):\n",
+    "    for block in model.vit.encoder.layer:\n",
+    "        # grab original dense layers\n",
+    "        d = block.attention.attention.query.in_features\n",
+    "        # replace with LoRA versions for query and value\n",
+    "        block.attention.attention.query = LoRALinear(d, d, bias=False, r=r)\n",
+    "        block.attention.attention.value = LoRALinear(d, d, bias=False, r=r)\n",
+    "\n",
+    "inject_lora_in_vit(model, r=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7074e2c2-1af7-4e1a-bfbd-3ef283280fd5",
+   "metadata": {},
+   "source": [
+    "Injecting the LoRA can be seen in the model where the linear layers changed to the `LoRALinear`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "5e4732ec-e445-4517-97a7-bcf296806b2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model after LoRA\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "ViTForImageClassification(\n",
+       "  (vit): ViTModel(\n",
+       "    (embeddings): ViTEmbeddings(\n",
+       "      (patch_embeddings): ViTPatchEmbeddings(\n",
+       "        (projection): Conv2d(3, 768, kernel_size=(16, 16), stride=(16, 16))\n",
+       "      )\n",
+       "      (dropout): Dropout(p=0.0, inplace=False)\n",
+       "    )\n",
+       "    (encoder): ViTEncoder(\n",
+       "      (layer): ModuleList(\n",
+       "        (0-11): 12 x ViTLayer(\n",
+       "          (attention): ViTAttention(\n",
+       "            (attention): ViTSelfAttention(\n",
+       "              (query): LoRALinear()\n",
+       "              (key): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (value): LoRALinear()\n",
+       "            )\n",
+       "            (output): ViTSelfOutput(\n",
+       "              (dense): Linear(in_features=768, out_features=768, bias=True)\n",
+       "              (dropout): Dropout(p=0.0, inplace=False)\n",
+       "            )\n",
+       "          )\n",
+       "          (intermediate): ViTIntermediate(\n",
+       "            (dense): Linear(in_features=768, out_features=3072, bias=True)\n",
+       "            (intermediate_act_fn): GELUActivation()\n",
+       "          )\n",
+       "          (output): ViTOutput(\n",
+       "            (dense): Linear(in_features=3072, out_features=768, bias=True)\n",
+       "            (dropout): Dropout(p=0.0, inplace=False)\n",
+       "          )\n",
+       "          (layernorm_before): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "          (layernorm_after): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "        )\n",
+       "      )\n",
+       "    )\n",
+       "    (layernorm): LayerNorm((768,), eps=1e-12, elementwise_affine=True)\n",
+       "  )\n",
+       "  (classifier): Linear(in_features=768, out_features=10, bias=True)\n",
+       ")"
+      ]
+     },
+     "execution_count": 147,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(\"Model after LoRA\")\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "a5ef9d59-e14e-46a7-b57e-62c6646a5d64",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "feature_extractor = ViTImageProcessor.from_pretrained(\"google/vit-base-patch16-224-in21k\") # ViTFeatureExtractor will be depricated\n",
+    "transform = transforms.Compose([\n",
+    "    transforms.Resize((224, 224)),\n",
+    "    transforms.ToTensor(),\n",
+    "    transforms.Normalize(feature_extractor.image_mean, feature_extractor.image_std)\n",
+    "])\n",
+    "\n",
+    "train_ds = CIFAR10(root='data', train=True, download=True, transform=transform)\n",
+    "test_ds  = CIFAR10(root='data', train=False, download=True, transform=transform)\n",
+    "train_loader = DataLoader(train_ds, batch_size=16, shuffle=True)\n",
+    "test_loader  = DataLoader(test_ds, batch_size=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "id": "e6102c48-ecb3-43e0-8302-9045b165a790",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3125 x 16 samples.\n",
+      "625 x 16 samples.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(str(len(train_loader)) + \" x 16 samples.\\n\" + str(len(test_loader))+ \" x 16 samples.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "id": "0cfbc9d8-131a-45db-875d-84b93b01d336",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
+    "\n",
+    "def train_one_epoch(model, loader, optimizer, device):\n",
+    "    model.train()\n",
+    "    for xb, yb in tqdm(loader):\n",
+    "        xb, yb = xb.to(device), yb.to(device)\n",
+    "        optimizer.zero_grad()\n",
+    "        outputs = model(pixel_values=xb).logits\n",
+    "        loss = F.cross_entropy(outputs, yb)\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "def evaluate(model, loader, device):\n",
+    "    model.eval()\n",
+    "    correct, total = 0, 0\n",
+    "    with torch.no_grad():\n",
+    "        for xb, yb in loader:\n",
+    "            xb, yb = xb.to(device), yb.to(device)\n",
+    "            logits = model(pixel_values=xb).logits\n",
+    "            preds = logits.argmax(dim=-1)\n",
+    "            correct += (preds == yb).sum().item()\n",
+    "            total += yb.size(0)\n",
+    "    return correct / total"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9e760e40-08ac-4f65-8b0a-37ee0b92d696",
+   "metadata": {},
+   "source": [
+    "Run both training cells below when large GPU is available."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "516e7f00-01fd-4741-a53b-e75e923c82a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_full = ViTForImageClassification.from_pretrained(\n",
+    "#     \"google/vit-base-patch16-224-in21k\", num_labels=10\n",
+    "# ).to(device)\n",
+    "# opt_full = optim.Adam(model_full.parameters(), lr=3e-5)\n",
+    "\n",
+    "# train_one_epoch(model_full, train_loader, opt_full, device)\n",
+    "# acc_full = evaluate(model_full, test_loader, device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "0d344dfd-256e-4f1f-910a-9cff21c8000d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model_lora = ViTForImageClassification.from_pretrained(\n",
+    "#     \"google/vit-base-patch16-224-in21k\", num_labels=10\n",
+    "# )\n",
+    "# inject_lora_in_vit(model_lora, r=4)\n",
+    "\n",
+    "# # Freeze everything except LoRA\n",
+    "# for name, param in model_lora.named_parameters():\n",
+    "#     if \"lora_\" not in name:\n",
+    "#         param.requires_grad = False\n",
+    "\n",
+    "# model_lora = model_lora.to(device)\n",
+    "# opt_lora = optim.Adam(filter(lambda p: p.requires_grad, model_lora.parameters()), lr=3e-5)\n",
+    "\n",
+    "# train_one_epoch(model_lora, train_loader, opt_lora, device)\n",
+    "# acc_lora = evaluate(model_lora, test_loader, device)"
    ]
   }
  ],
